Fixing 'P1' and 'P2' strings' spacing on display

--- a/style.css
+++ b/style.css
@@ -186,9 +186,9 @@ aside {
     overflow-y: auto;
 }
 
-#displayMain i {
+#displayMain i, #displayMain span {
     display: inline-block;
-    padding: 8px;
+    padding: 0 8px;
     font-size: 55px;
 }
 
@@ -203,9 +203,9 @@ aside {
     overflow-y: auto;
 }
 
-#displayP1 i {
+#displayP1 i, #displayP1 span {
     display: inline-block;
-    padding: 8px;
+    padding: 0 8px;
     font-size: 55px;
 }
 
@@ -220,9 +220,9 @@ aside {
     overflow-y: auto;
 }
 
-#displayP2 i {
+#displayP2 i, #displayP2 span {
     display: inline-block;
-    padding: 8px;
+    padding: 0 8px;
     font-size: 55px;
 }
 
@@ -609,4 +609,3 @@ footer .hidden{
 #gameInstructionsSection .robot-style {
     font-size: 55px;
 }
-
